@@ -24,6 +24,13 @@ MComix 0.92 (4.0.5)
       icon instead of the standard MComix icon. (inspired by Alexandr
       Domrachev)
 
+    - Added the following new command line switches:
+      -m           Manga mode
+      -s           Slideshow
+      -d           Double-page mode
+      -B, -W, -H   Fit best/width/height, respectively.
+      (suggested by Anonymous on the Comix tracker, adapted by Alan Horkan)
+
     - The following preference items have been removed: 
 
       "Automated crash recovery": No longer necessary.
